--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>About | Your Name</title>
+  <title>About | Tony Bee</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Tony Bee</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -27,11 +27,22 @@
 
       <img src="assets/images/sports.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>Hi! My name is Tony Bee. I'm 28 years old, and I was born and raised in Channahon,
+        Illinois; a small town
+        about 30 minutes south of Chicago. In high school I played football and enjoyed playing
+        the guitar outside of
+        school. I went to college at the University of Illinois in Champaign-Urbana, and studied
+        Advertising.</p>
+    <p>Upon graduating in 2012, I started working part-time at Baird & Warner Title Services.
+        I've worked there the past
+        6 years, working my way up as a part-time scanner to an underwriting and title examining
+        position.
+        In my free time I enjoy reading non-fiction, playing golf, long distance running, and
+        exercise in general.</p>
+    <p>I've always had and interest in coding and software development, and upon feeling stuck
+        in my current work situation,
+        I signed up for the Northwestern Coding Bootcamp to seek out other opportunities in the
+        ever-expanding world of software.</p>
 
     </section>
 
