updated profile bio and image

--- a/index.html
+++ b/index.html
@@ -25,24 +25,25 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/sports.jpg" class="auth-image" alt="Your Name">
+      <img src="/assets/images/me.jpg" class="auth-image" alt="Tony Bee">
 
-      <p>Hi! My name is Tony Bee. I'm 28 years old, and I was born and raised in Channahon,
-        Illinois; a small town
-        about 30 minutes south of Chicago. In high school I played football and enjoyed playing
-        the guitar outside of
-        school. I went to college at the University of Illinois in Champaign-Urbana, and studied
-        Advertising.</p>
-    <p>Upon graduating in 2012, I started working part-time at Baird & Warner Title Services.
-        I've worked there the past
-        6 years, working my way up as a part-time scanner to an underwriting and title examining
-        position.
-        In my free time I enjoy reading non-fiction, playing golf, long distance running, and
-        exercise in general.</p>
-    <p>I've always had and interest in coding and software development, and upon feeling stuck
-        in my current work situation,
-        I signed up for the Northwestern Coding Bootcamp to seek out other opportunities in the
-        ever-expanding world of software.</p>
+    <p>Hi! my name is Tony Bee. I'm 28 years old, and I was born and raised in
+    Channahon, Illinois; a small town about 30 minutes south of Chicago. I
+    graduated from the University of Illinois in 2012 with a bachelor's degree
+    in advertising. Upon graduation I began my professional career in the real
+    estate industry at Baird & Warner Title Services, where over the past 7
+    years I’ve worked my way up as a part time scanner, to a leader within the
+    operations. I’ve recently spearheaded the development of a start-up title
+    company within Baird & Warner, Starck Title Services; manning every phase of
+    the operations.</p>
+
+      <p>Upon feeling stuck in the real estate industry, I signed up for the
+      Northwestern Full Stack Coding Bootcamp to pursue a career in the
+      ever-expanding web development industry. I’m in love with the learning
+      experience, and the feeling of accomplishment that comes with solving
+      difficult problems that require critical thinking. My experience in the
+      Bootcamp has fostered a newfound passion for coding and web development,
+      and I look forward to a lifelong journey of learning in the field.</p>
 
     </section>
 
