corrected about me

--- a/index.html
+++ b/index.html
@@ -27,23 +27,9 @@
 
       <img src="/assets/images/me.jpg" class="auth-image" alt="Tony Bee">
 
-    <p>Hi! my name is Tony Bee. I'm 28 years old, and I was born and raised in
-    Channahon, Illinois; a small town about 30 minutes south of Chicago. I
-    graduated from the University of Illinois in 2012 with a bachelor's degree
-    in advertising. Upon graduation I began my professional career in the real
-    estate industry at Baird & Warner Title Services, where over the past 7
-    years I’ve worked my way up as a part time scanner, to a leader within the
-    operations. I’ve recently spearheaded the development of a start-up title
-    company within Baird & Warner, Starck Title Services; manning every phase of
-    the operations.</p>
+    <p>I’m a web developer proficient in HTML, CSS, Javascript, Python, React.js, Node.js, Express, MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
 
-      <p>Upon feeling stuck in the real estate industry, I signed up for the
-      Northwestern Full Stack Coding Bootcamp to pursue a career in the
-      ever-expanding web development industry. I’m in love with the learning
-      experience, and the feeling of accomplishment that comes with solving
-      difficult problems that require critical thinking. My experience in the
-      Bootcamp has fostered a newfound passion for coding and web development,
-      and I look forward to a lifelong journey of learning in the field.</p>
+      I’m currently enrolled in the Northwestern Full Stack Coding Bootcamp to pursue a career in the ever-expanding web development industry. I’m in love with the learning experience, and the feeling of accomplishment that comes with solving difficult problems that require critical thinking. My experience in the Bootcamp has fostered a newfound passion for coding and web development, and„ I look forward to a lifelong journey of learning in the field.</p>
 
     </section>
 
