--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,8 @@
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://github.com/bee25141">Github</a>
+        <a href="https://www.linkedin.com/in/tony-bee-abab93174/">LinkedIn</a>
       </nav>
     </div>
   </header>
