--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src= "/portfolio/assets/images/me.jpg" class="auth-image" alt="Tony Bee">
+      <img src= "assets/images/me.jpg" class="auth-image" alt="Tony Bee">
 
     <p>I’m a web developer proficient in HTML, CSS, Javascript, Python, React.js, Node.js, Express, MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
 
