final commit for night to save changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p>I’m a web developer proficient in HTML, CSS, Javascript, Python, React.js, Node.js, Express, MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
 
-      I’m currently enrolled in the Northwestern Full Stack Coding Bootcamp to pursue a career in the ever-expanding web development industry. I’m in love with the learning experience, and the feeling of accomplishment that comes with solving difficult problems that require critical thinking. My experience in the Bootcamp has fostered a newfound passion for coding and web development, and„ I look forward to a lifelong journey of learning in the field.</p>
+      I’m currently enrolled in the Northwestern Full Stack Coding Bootcamp to pursue a career in the ever-expanding web development industry. I’m in love with the learning experience, and the feeling of accomplishment that comes with solving difficult problems that require critical thinking. My experience in the Bootcamp has fostered a newfound passion for coding and web development, and I look forward to a lifelong journey of learning in the field.</p>
 
     </section>
 
