--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header id="masthead">
-    <div class="container">
+    <div class="container"> 
       <a href="index.html" id="logo">Tony Bee</a>
       <nav>
         <a href="index.html">About</a>
@@ -37,6 +37,7 @@
   </div>
 
   <footer>
+      Bee25141@gmail.com
     <div class="container">
       Copyright &copy; 
     </div>
