updated portfolio page w/ current projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="https://github.com/bee25141">Github</a>
-        <a href="https://www.linkedin.com/in/tony-bee-abab93174/">LinkedIn</a>
+        <a href="https://github.com/bee25141" target="_blank">Github</a>
+        <a href="https://www.linkedin.com/in/tony-bee-abab93174/" target="_blank">LinkedIn</a>
       </nav>
     </div>
   </header>
@@ -37,19 +37,19 @@
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/trivia.jpg" alt="Trivia Game">
+        <img src="assets/images/trivia_town.png" alt="Trivia Town">
 
-        <h3>Trivia Game</h3>
+       <a href="https://bee25141.github.io/TriviaGame2/" target="_blank"><h3>Guy Fieri's Trivia-Town</h3></a> 
       </div>
       <div class="work">
-        <img src="assets/images/rutgers.jpeg" alt="Rutgers Info Widget">
+        <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
 
-        <h3>Rutgers Info Widget</h3>
+        <a href="https://bee25141.github.io/crystals-collector/" target="_blank"> <h3>Crystals Collector</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/rockpaperscissors.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/psychicgame.png" alt="Psychic Game">
 
-        <h3>Rock Paper Scissors</h3>
+        <a href="https://bee25141.github.io/Psychic-Game/" target="_blank"> <h3>Psychic Game</h3></a>
       </div>
 
     </section>
