added parallax schrolling to background

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="parallax">
 
   <header id="masthead">
-    <div class="container"> 
+    <div class="container">
       <a href="index.html" id="logo">Tony Bee</a>
       <nav>
         <a href="index.html">About</a>
@@ -26,22 +26,28 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src= "assets/images/me.jpg" class="auth-image" alt="Tony Bee">
+      <img src="assets/images/me.jpg" class="auth-image" alt="Tony Bee">
 
-    <p>I’m a web developer proficient in HTML, CSS, Javascript, Python, React.js, Node.js, Express, MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
+      <p class="about">I’m a web developer proficient in HTML, CSS, Javascript, Python, React.js, Node.js, Express,
+        MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird
+        & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
 
-      I’m currently enrolled in the Northwestern Full Stack Coding Bootcamp to pursue a career in the ever-expanding web development industry. I’m in love with the learning experience, and the feeling of accomplishment that comes with solving difficult problems that require critical thinking. My experience in the Bootcamp has fostered a newfound passion for coding and web development, and I look forward to a lifelong journey of learning in the field.</p>
+        I’m currently enrolled in the Northwestern Full Stack Coding Bootcamp to pursue a career in the ever-expanding
+        web development industry. I’m in love with the learning experience, and the feeling of accomplishment that comes
+        with solving difficult problems that require critical thinking. My experience in the Bootcamp has fostered a
+        newfound passion for coding and web development, and I look forward to a lifelong journey of learning in the
+        field.</p>
 
     </section>
 
   </div>
 
-  <footer>
-      Bee25141@gmail.com
+  <div class="footer">
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy;
+      Bee25141@gmail.com          
     </div>
-  </footer>
+  </div class="footer">
 </body>
 
 </html>
