--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="parallax">
 
   <header id="masthead">
     <div class="container">
@@ -27,9 +27,9 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/ipad.jpg" alt="Word Guess">
+        <img src="assets/images/lunch_calculator1.png" alt="Lunch Calculator">
 
-        <h3>Word Guess</h3>
+        <a href="https://bee25141.github.io/lunch-calculator/" target="_blank"><h3>Lunch Calculator</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/rpg.jpg" alt="RPG Game">
