corrected footer on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,12 +56,12 @@
 
   </div>
 
-  <footer>
-      Bee25141@gmail.com
-    <div class="container">
-      Copyright &copy;
+  <div class="footer">
+      <div class="container">
+        Copyright &copy; |
+        Bee25141@gmail.com          
+      </div>
     </div>
-  </footer>
 </body>
 
 </html>
