--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
   <div class="footer">
     <div class="container">
-      Copyright &copy;
+      Copyright &copy; |
       Bee25141@gmail.com          
     </div>
-  </div class="footer">
+  </div>
 </body>
 
 </html>
