updated portfolio links to direct to github repo links

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <div class="work">
         <img src="assets/images/lunch_calculator1.png" alt="Lunch Calculator">
 
-        <a href="https://bee25141.github.io/lunch-calculator/" target="_blank"><h3>Lunch Calculator</h3></a>
+        <a href="https://github.com/bee25141/lunch-calculator" target="_blank"><h3>Lunch Calculator</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/rpg.jpg" alt="RPG Game">
@@ -39,17 +39,17 @@
       <div class="work">
         <img src="assets/images/trivia_town.png" alt="Trivia Town">
 
-       <a href="https://bee25141.github.io/TriviaGame2/" target="_blank"><h3>Guy Fieri's Trivia-Town</h3></a> 
+       <a href="https://github.com/bee25141/TriviaGame2/" target="_blank"><h3>Guy Fieri's Trivia-Town</h3></a> 
       </div>
       <div class="work">
         <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
 
-        <a href="https://bee25141.github.io/crystals-collector/" target="_blank"> <h3>Crystals Collector</h3></a>
+        <a href="https://github.com/bee25141/crystals-collector/" target="_blank"> <h3>Crystals Collector</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/psychicgame.png" alt="Psychic Game">
 
-        <a href="https://bee25141.github.io/Psychic-Game/" target="_blank"> <h3>Psychic Game</h3></a>
+        <a href="https://github.com/bee25141/Psychic-Game/" target="_blank"> <h3>Psychic Game</h3></a>
       </div>
 
     </section>
