updated portfolio with liri node app

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,9 @@
         <a href="https://github.com/bee25141/lunch-calculator" target="_blank"><h3>Lunch Calculator</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/rpg.jpg" alt="RPG Game">
+        <img src="assets/images/liri.png" alt="Liri-Node-App">
 
-        <h3>RPG Game</h3>
+       <a href="https://github.com/bee25141/liri-node-app" target="_blank"><h3>Liri Node App</h3></a> 
       </div>
       <div class="work">
         <img src="assets/images/trivia_town.png" alt="Trivia Town">
