--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Portfolio | Tony Bee</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -25,43 +27,81 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/flocka_time.png" alt="Flocka Time">
 
-      <div class="work">
-        <img src="assets/images/lunch_calculator1.png" alt="Lunch Calculator">
+              <a href="https://flockatime.com/" target="_blank">
+                <h3>Flocka Time</h3>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/lunch_calculator1.png" alt="Lunch Calculator">
 
-        <a href="https://github.com/bee25141/lunch-calculator" target="_blank"><h3>Lunch Calculator</h3></a>
+              <a href="https://github.com/bee25141/lunch-calculator" target="_blank">
+                <h3>Lunch Calculator</h3>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/liri.png" alt="Liri-Node-App">
+
+              <a href="https://github.com/bee25141/liri-node-app" target="_blank">
+                <h3>Liri Node App</h3>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+          <div class="work">
+            <img src="assets/images/trivia_town.png" alt="Trivia Town">
+
+            <a href="https://github.com/bee25141/TriviaGame2/" target="_blank">
+              <h3>Guy Fieri's Trivia-Town</h3>
+            </a>
+          </div>
+          </div>
+        </div>
+        
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+          <div class="work">
+            <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
+
+            <a href="https://github.com/bee25141/crystals-collector/" target="_blank">
+              <h3>Crystals Collector</h3>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+          <div class="work">
+            <img src="assets/images/psychicgame.png" alt="Psychic Game">
+
+            <a href="https://github.com/bee25141/Psychic-Game/" target="_blank">
+              <h3>Psychic Game</h3>
+            </a>
+          </div>
+          </div>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/liri.png" alt="Liri-Node-App">
+  </div>
 
-       <a href="https://github.com/bee25141/liri-node-app" target="_blank"><h3>Liri Node App</h3></a> 
-      </div>
-      <div class="work">
-        <img src="assets/images/trivia_town.png" alt="Trivia Town">
-
-       <a href="https://github.com/bee25141/TriviaGame2/" target="_blank"><h3>Guy Fieri's Trivia-Town</h3></a> 
-      </div>
-      <div class="work">
-        <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
-
-        <a href="https://github.com/bee25141/crystals-collector/" target="_blank"> <h3>Crystals Collector</h3></a>
-      </div>
-      <div class="work">
-        <img src="assets/images/psychicgame.png" alt="Psychic Game">
-
-        <a href="https://github.com/bee25141/Psychic-Game/" target="_blank"> <h3>Psychic Game</h3></a>
-      </div>
-
-    </section>
+  </section>
 
   </div>
 
   <div class="footer">
-      <div class="container">
-        Copyright &copy; |
-        Bee25141@gmail.com          
-      </div>
+    <div class="container">
+      Copyright &copy; |
+      Bee25141@gmail.com
     </div>
+  </div>
 </body>
 
 </html>
