updated to add bamazon

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
         <div class="row d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
-              <img src="assets/images/flocka_time.png" alt="Flocka Time">
+              <img src="assets/images/bamazon.png" alt="Flocka Time">
 
-              <a href="https://flockatime.com/" target="_blank">
-                <h3>Flocka Time</h3>
+              <a href="https://github.com/bee25141/bamazon" target="_blank">
+                <h3>Bamazon</h3>
               </a>
             </div>
           </div>
@@ -51,6 +51,15 @@
         <div class="row d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
+              <img src="assets/images/flocka_time.png" alt="Flocka Time">
+
+              <a href="https://flockatime.com/" target="_blank">
+                <h3>Flocka Time</h3>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
               <img src="assets/images/liri.png" alt="Liri-Node-App">
 
               <a href="https://github.com/bee25141/liri-node-app" target="_blank">
@@ -58,35 +67,27 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
-          <div class="work">
-            <img src="assets/images/trivia_town.png" alt="Trivia Town">
 
-            <a href="https://github.com/bee25141/TriviaGame2/" target="_blank">
-              <h3>Guy Fieri's Trivia-Town</h3>
-            </a>
-          </div>
-          </div>
         </div>
-        
+
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-12 col-md-6 d-flex justify-content-center">
-          <div class="work">
-            <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/trivia_town.png" alt="Trivia Town">
 
-            <a href="https://github.com/bee25141/crystals-collector/" target="_blank">
-              <h3>Crystals Collector</h3>
-            </a>
+              <a href="https://github.com/bee25141/TriviaGame2/" target="_blank">
+                <h3>Guy Fieri's Trivia-Town</h3>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
-          <div class="work">
-            <img src="assets/images/psychicgame.png" alt="Psychic Game">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
 
-            <a href="https://github.com/bee25141/Psychic-Game/" target="_blank">
-              <h3>Psychic Game</h3>
-            </a>
-          </div>
+              <a href="https://github.com/bee25141/crystals-collector/" target="_blank">
+                <h3>Crystals Collector</h3>
+              </a>
+            </div>
           </div>
         </div>
       </div>
