--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,27 @@
               </a>
             </div>
           </div>
+        </div>
 
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/home.png" alt="FriendFinder">
+
+              <a href="https://github.com/bee25141/FriendFinder" target="_blank">
+                <h3>FriendFinder</h3>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+            <div class="work">
+              <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
+
+              <a href="https://github.com/bee25141/crystals-collector/" target="_blank">
+                <h3>Crystals Collector</h3>
+              </a>
+            </div>
+          </div>
         </div>
 
         <div class="row d-flex justify-content-center">
@@ -82,10 +102,10 @@
           </div>
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
-              <img src="assets/images/crystals_collector.png" alt="Crystals Collector">
+              <img src="assets/images/train_time.png" alt="Train Time">
 
-              <a href="https://github.com/bee25141/crystals-collector/" target="_blank">
-                <h3>Crystals Collector</h3>
+              <a href="https://github.com/bee25141/train-time" target="_blank">
+                <h3>Train Time</h3>
               </a>
             </div>
           </div>
