--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
         MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird
         & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
 
-        I’m currently enrolled in the Northwestern Full Stack Coding Bootcamp to pursue a career in the ever-expanding
-        web development industry. I’m in love with the learning experience, and the feeling of accomplishment that comes
-        with solving difficult problems that require critical thinking. My experience in the Bootcamp has fostered a
-        newfound passion for coding and web development, and I look forward to a lifelong journey of learning in the
-        field.</p>
+        I’m currently in the last few weeks of the Northwestern Full Stack
+        Developer Coding Bootcamp and will soon be transitioning into my career as a
+        software engineer. I’m in love with the learning experience, and the
+        feeling of accomplishment that comes with solving difficult problems
+        that require critical thinking. My experience in the bootcamp has
+        fostered a newfound passion for coding and web development, and I look
+        forward to a lifelong journey of learning in the field.</p>
 
     </section>
 
