updated portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
         <div class="row d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
-              <img src="assets/images/bamazon.png" alt="Flocka Time">
+              <img src="assets/images/clicky_game.png" alt="Clicky Game">
 
-              <a href="https://github.com/bee25141/bamazon" target="_blank">
-                <h3>Bamazon</h3>
+              <a href="https://github.com/bee25141/Clicky-Game" target="_blank">
+                <h3>Clicky Game</h3>
               </a>
             </div>
           </div>
@@ -51,10 +51,10 @@
         <div class="row d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
-              <img src="assets/images/flocka_time.png" alt="Flocka Time">
-
-              <a href="https://flockatime.com/" target="_blank">
-                <h3>Flocka Time</h3>
+              <img src="assets/images/bamazon.png" alt="Flocka Time">
+  
+              <a href="https://github.com/bee25141/bamazon" target="_blank">
+                <h3>Bamazon</h3>
               </a>
             </div>
           </div>
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-
+        
         <div class="row d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
@@ -91,15 +91,7 @@
         </div>
 
         <div class="row d-flex justify-content-center">
-          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
-            <div class="work">
-              <img src="assets/images/trivia_town.png" alt="Trivia Town">
 
-              <a href="https://github.com/bee25141/TriviaGame2/" target="_blank">
-                <h3>Guy Fieri's Trivia-Town</h3>
-              </a>
-            </div>
-          </div>
           <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="work">
               <img src="assets/images/train_time.png" alt="Train Time">
