updated about me

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 
       <img src="assets/images/me.jpg" class="auth-image" alt="Tony Bee">
 
-      <p class="about">I’m a web developer proficient in HTML, CSS, Javascript, Python, React.js, Node.js, Express,
-        MySql, and MongoDB. Upon graduating college I began my professional career in the real estate industry at Baird
-        & Warner Title Services, where I’ve worked my way up as a part time scanner, to a leader within the operations.
+      <p class="about">I’m a web developer proficient in HTML, CSS,
+      Javascript, jQuery, React.js, Node.js, Express, MySQL, MongoDB and Amazon
+      Web Services. Upon graduating college I began my professional career in
+      the real estate industry at Baird & Warner Title Services, where I’ve
+      worked my way up as a part time scanner, to a leader within the
+      operations.
 
         I’m currently in the last few weeks of the Northwestern Full Stack
         Developer Coding Bootcamp and will soon be transitioning into my career as a
